--- a/website/installation.html
+++ b/website/installation.html
@@ -24,6 +24,9 @@
         <div class="px-4 pb-2">
           <a href="usage.html" class="cursor-pointer text-[#3393bd]">Usage</a>
         </div>
+        <div class="px-4 pb-2">
+          <a href="api.html" class="cursor-pointer text-[#3393bd]">API</a>
+        </div>
       </div>
     </nav>
 
