--- a/website/usage.html
+++ b/website/usage.html
@@ -24,6 +24,9 @@
         <div class="px-4 pb-2">
           <a href="usage.html" class="cursor-pointer text-[#3393bd]">Usage</a>
         </div>
+        <div class="px-4 pb-2">
+          <a href="api.html" class="cursor-pointer text-[#3393bd]">API</a>
+        </div>
       </div>
     </nav>
 
@@ -136,171 +139,6 @@ const DiagramComponent: React.FC = () =&gt; {
 
 export default DiagramComponent;</code>
         </pre>
-
-        <h1 class="text-[28px] font-weight border-b border-[#dddddd] mt-8">API</h1>
-
-        <h2 class="text-[24px] font-weight mt-6">Constructor</h2>
-        <pre class="h-[60px]">
-          <code class="bg-[#f0f0f0] border-l border-[#3393bd] block p-4">const sprotty = new Sprotty(options);</code>
-        </pre>
-
-        <p class="mt-8"><strong>Options:</strong></p>
-        <ul class="list-disc ml-8 mt-2">
-          <li><code>containerId</code> (string, optional): ID of the container element. Default: <code>'sprotty-container'</code></li>
-          <li><code>initialModel</code> (object, optional): Initial model to load</li>
-        </ul>
-
-        <h2 class="text-[24px] font-weight mt-6">Methods</h2>
-
-        <h3 class="text-[20px] font-weight mt-4"><code>init(): Promise&lt;void&gt;</code></h3>
-        <p class="mt-2">Initialize the Sprotty diagram. This method must be called after the DOM is ready.</p>
-        <pre class="h-[60px] mt-2">
-          <code class="bg-[#f0f0f0] border-l border-[#3393bd] block p-4">await sprotty.init();</code>
-        </pre>
-
-        <h3 class="text-[20px] font-weight mt-8"><code>getModel(): object</code></h3>
-        <p class="mt-">Get the current diagram model.</p>
-        <pre class="h-[80px] mt-2">
-          <code class="bg-[#f0f0f0] border-l border-[#3393bd] block p-4">const model = sprotty.getModel();
-console.log(model);</code>
-        </pre>
-
-        <h3 class="text-[20px] font-weight mt-10"><code>loadModel(model: object): void</code></h3>
-        <p class="mt-2">Load a new model into the diagram.</p>
-        <pre class="h-[160px] mt-2">
-          <code class="bg-[#f0f0f0] border-l border-[#3393bd] block p-4">const newModel = {
-    type: 'graph',
-    id: 'graph',
-    children: [
-        // ... nodes and edges
-    ]
-};
-sprotty.loadModel(newModel);</code>
-        </pre>
-
-        <h3 class="text-[20px] font-weight mt-30"><code>createNodeWithPorts(config: ICreateNodeWithPorts): SprottyNode</code></h3>
-        <p class="mt-2">Create a node with ports and add it to the diagram.</p>
-        <pre style="height: auto; max-height: 400px; overflow-y: auto;" class="mt-2">
-          <code class="bg-[#f0f0f0] border-l border-[#3393bd] block p-4">const node = sprotty.createNodeWithPorts({
-    id: 'node1',
-    x: 100,
-    y: 100,
-    name: 'My Node',
-    size: { width: 150, height: 80 },
-    ports: [
-        { type: 'input', side: 'left', shape: 'circle', id: 'in1' },
-        { type: 'input', side: 'left', shape: 'square', id: 'in2' },
-        { type: 'output', side: 'right', shape: 'circle', id: 'out1' },
-        { type: 'output', side: 'right', shape: 'triangle', id: 'out2' },
-        { type: 'input', side: 'top', shape: 'diamond', id: 'top-in' },
-        { type: 'output', side: 'bottom', shape: 'circle', id: 'bottom-out' }
-    ]
-});</code>
-        </pre>
-
-        <p class="mt-4"><strong>Parameters:</strong></p>
-        <ul class="list-disc ml-8 mt-2">
-          <li><code>id</code> (string): Unique ID for the node</li>
-          <li><code>x</code> (number): X position</li>
-          <li><code>y</code> (number): Y position</li>
-          <li><code>name</code> (string): Display name of the node</li>
-          <li><code>size</code> (object): <code>{ width: number, height: number }</code></li>
-          <li><code>ports</code> (array): Array of port configurations
-            <ul class="list-disc ml-8 mt-1">
-              <li><code>type</code>: <code>'input'</code> or <code>'output'</code></li>
-              <li><code>side</code>: <code>'left'</code>, <code>'right'</code>, <code>'top'</code>, or <code>'bottom'</code></li>
-              <li><code>shape</code>: <code>'circle'</code>, <code>'square'</code>, <code>'triangle'</code>, or <code>'diamond'</code> (optional, default: <code>'circle'</code>)</li>
-              <li><code>id</code> (string, optional): ID for the port (will be auto-generated if not provided)</li>
-              <li><code>label</code> (string, optional): Display label for the port</li>
-            </ul>
-          </li>
-          <li><code>flipHorizontal</code> (number | null, optional): Flip node horizontally</li>
-          <li><code>flipVertical</code> (number | null, optional): Flip node vertically</li>
-          <li><code>rotation</code> (number, optional): Rotation angle (degrees)</li>
-        </ul>
-
-        <h3 class="text-[20px] font-weight mt-4"><code>destroy(): void</code></h3>
-        <p class="mt-2">Destroy the instance and cleanup resources.</p>
-        <pre class="h-[60px] mt-2">
-          <code class="bg-[#f0f0f0] border-l border-[#3393bd] block p-4">sprotty.destroy();</code>
-        </pre>
-
-        <h1 class="text-[28px] font-weight border-b border-[#dddddd] mt-10">Model Examples</h1>
-        <pre style="height: auto; max-height: 600px; overflow-y: auto;">
-          <code class="bg-[#f0f0f0] border-l border-[#3393bd] block p-4">const model = {
-    "type": "graph",
-    "id": "root",
-    "children": [
-        {
-            "type": "node:process",
-            "id": "node-1768746343480",
-            "position": { "x": 251, "y": 291 },
-            "size": { "width": 120, "height": 60 },
-            "name": "Default Node",
-            "children": [
-                {
-                    "type": "port:flow",
-                    "id": "node-1768746343480-in",
-                    "position": { "x": -8, "y": 22 },
-                    "size": { "width": 16, "height": 16 },
-                    "portType": "input",
-                    "shape": "circle",
-                    "side": "left"
-                },
-                {
-                    "type": "port:flow",
-                    "id": "node-1768746343480-out",
-                    "position": { "x": 112, "y": 22 },
-                    "size": { "width": 16, "height": 16 },
-                    "portType": "output",
-                    "shape": "circle",
-                    "side": "right"
-                }
-            ],
-            "flipHorizontal": null,
-            "flipVertical": null,
-            "rotation": 0
-        },
-        {
-            "type": "node:process",
-            "id": "node-1768747243406",
-            "position": { "x": 526, "y": 179 },
-            "size": { "width": 120, "height": 60 },
-            "name": "Default Node",
-            "children": [
-                {
-                    "type": "port:flow",
-                    "id": "node-1768747243406-in",
-                    "position": { "x": -8, "y": 22 },
-                    "size": { "width": 16, "height": 16 },
-                    "portType": "input",
-                    "shape": "circle",
-                    "side": "left"
-                },
-                {
-                    "type": "port:flow",
-                    "id": "node-1768747243406-out",
-                    "position": { "x": 112, "y": 22 },
-                    "size": { "width": 16, "height": 16 },
-                    "portType": "output",
-                    "shape": "circle",
-                    "side": "right"
-                }
-            ],
-            "flipHorizontal": null,
-            "flipVertical": null,
-            "rotation": 0
-        },
-        {
-            "type": "edge:flow",
-            "id": "edge-1",
-            "sourceId": "node-1768746343480-out",
-            "targetId": "node-1768747243406-in"
-        }
-    ]
-};</code>
-        </pre>
-
       </div>
     </main>
   </body>
