--- a/website/index.html
+++ b/website/index.html
@@ -24,6 +24,9 @@
         <div class="px-4 pb-2">
           <a href="usage.html" class="cursor-pointer text-[#3393bd]">Usage</a>
         </div>
+        <div class="px-4 pb-2">
+          <a href="api.html" class="cursor-pointer text-[#3393bd]">API</a>
+        </div>
       </div>
     </nav>
 
@@ -47,6 +50,9 @@
           </li>
           <li>
             <a href="usage.html" class="cursor-pointer text-[#3393bd]">Usage</a> - How to use the package?
+          </li>
+          <li>
+            <a href="api.html" class="cursor-pointer text-[#3393bd]">API</a>  - Full API reference.
           </li>
         </ul>
       </div>
